--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
       </div>
     </div>
 
-    <div class="footer-bg" style="padding-top: 9em">
+    <div class="footer-bg">
       <div class="call-to-action bg-dark-transparent">
         <div class="container text-white">
           <h4 class="font-weight-bold">
@@ -234,88 +234,92 @@
             Lorem ipsum dolor sit amet, consectetur adipisicingelit, <br />
             sed do eiusmod tempor incididunt ut labore etdolore magna aliqua.
           </p>
-          <button class="btn bg-blue font-weight-bold text-white">
+          <button
+            class="btn bg-blue px-5 font-weight-bold text-white"
+            data-toggle="modal"
+            data-target="#signUp"
+          >
             Mulai Sekarang
           </button>
         </div>
       </div>
-      <footer class="mt-7 pb-5">
-        <div class="container">
-          <div class="row justify-content-between">
-            <div class="col-md-6 col-lg-3">
-              <p class="h4 font-weight-bold text-secondary">Tentang Company</p>
-              <p class="text-secondary mt-4">
-                Lorem ipsum dolor sit amet, consectetur adipisicingelit,sed do
-                eiusmod tempor incididunt ut labore etdolore magna aliqua.
-              </p>
-              <ul>
-                <li>
-                  <a href="#"> </a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <p class="h4 text-secondary font-weight-bold">Links</p>
-              <ul class="mt-4">
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Tentang Company</a>
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">List Teachers</a>
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Teachers Content</a>
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Student Content</a>
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Blog</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <p class="h4 text-secondary font-weight-bold">Bantuan</p>
-              <ul class="mt-4">
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Butuh bantuan ?</a>
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">Kontak kami</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-md-6 col-lg-3">
-              <p class="h4 text-secondary font-weight-bold">Kontak kami</p>
-              <ul class="mt-4">
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">
-                    <i class="fas fa-envelope fa-1x mr-2"></i>
-                    example@gmail.com</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">
-                    <i class="fas fa-phone mr-2"></i>+62 999 9999 9999</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">
-                    <i class="fas fa-building mr-2"></i>0411-25559000</a
-                  >
-                </li>
-                <li class="mb-2">
-                  <a class="text-secondary" href="#">
-                    <i class="fas fa-map-marker-alt mr-2"></i>Bandung,
-                    Indonesia, 90241</a
-                  >
-                </li>
-              </ul>
-            </div>
+    </div>
+    <footer class="mt-7 pb-5">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 font-weight-bold text-secondary">Tentang Company</p>
+            <p class="text-secondary mt-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicingelit,sed do
+              eiusmod tempor incididunt ut labore etdolore magna aliqua.
+            </p>
+            <ul>
+              <li>
+                <a href="#"> </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Links</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Tentang Company</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">List Teachers</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Teachers Content</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Student Content</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Bantuan</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Butuh bantuan ?</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Kontak kami</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Kontak kami</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-envelope fa-1x mr-2"></i>
+                  example@gmail.com</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-phone mr-2"></i>+62 999 9999 9999</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-building mr-2"></i>0411-25559000</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-map-marker-alt mr-2"></i>Bandung, Indonesia,
+                  90241</a
+                >
+              </li>
+            </ul>
           </div>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
 
     <!-- Sign In Modal -->
     <div
