--- a/index.html
+++ b/index.html
@@ -31,6 +31,461 @@
       </div>
     </div>
 
+    <!-- main content -->
+    <div class="container main-content">
+      <!-- Why Choose us section -->
+      <section class="section-home">
+        <h2 class="section-title">Why choose JadiPintar?</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="why-choose-card">
+              <div class="why-choose-card__img">
+                <img src="./assets/certified.svg" alt="" />
+              </div>
+              <div class="why-choose-card__detail">
+                <p class="h5 font-weight-bold">
+                  1000+ certified and trained tutors
+                </p>
+                <p>
+                  Highly trained and certified tutors across subjects and
+                  curriculum.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="why-choose-card">
+              <div class="why-choose-card__img">
+                <img src="./assets/advanced.svg" alt="" />
+              </div>
+              <div class="why-choose-card__detail">
+                <p class="h5 font-weight-bold">Advanced technology</p>
+                <p>
+                  Save your online tutoring lesson videos and refer back at it
+                  again when you need it.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="why-choose-card">
+              <div class="why-choose-card__img">
+                <img src="./assets/service.svg" alt="" />
+              </div>
+              <div class="why-choose-card__detail">
+                <p class="h5 font-weight-bold">Service Guaranteed</p>
+                <p>If you don’t like your first lesson, it’s free!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Why Choose us section ends -->
+
+      <!-- How does it work section -->
+      <section class="section-home">
+        <h3 class="h2 section-title">How does it work ?</h3>
+
+        <div
+          class="row text-secondary align-items-center justify-content-between mb-5"
+        >
+          <div class="col-md-5">
+            <img src="./assets/how-does-1.svg " class="img-fluid" alt="" />
+          </div>
+          <div class="col-md-5">
+            <p class="h4 font-weight-bold">1. Choose your ideal tutor</p>
+
+            <p class="h5">
+              Find your best suited tutors based on fees, subject or reviews.
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="row text-secondary align-items-center flex-md-row-reverse justify-content-between mb-5"
+        >
+          <div class="col-md-5">
+            <img src="./assets/how-does-2.svg" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md-5">
+            <p class="h4 font-weight-bold">2. Your convenience matters!</p>
+
+            <p class="h5">
+              Adjust your lesson online based on your availability with our
+              booking feature!
+            </p>
+          </div>
+        </div>
+
+        <div
+          class="row text-secondary align-items-center justify-content-between"
+        >
+          <div class="col-md-5">
+            <img src="./assets/how-does-3.svg" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md-5">
+            <p class="h4 font-weight-bold">3. Interactive Session</p>
+
+            <p class="h5 text-justify">
+              Ask questions, get clearer explanations because the session is an
+              interactive one as you and your teacher will be linked up in a
+              video conferencing complete with tools that will help the
+              experience
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- How does it work section ends -->
+
+      <!-- Teachers section -->
+      <section class="section-home">
+        <h4 class="h2 section-title">
+          1,000+ Teachers. School lessons. At anytime.
+        </h4>
+        <div class="row">
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-1.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-2.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-3.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-4.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-5.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-6.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/team-1.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4 col-xl-3">
+            <a href="teacher-single.html" class="text-decoration-none">
+              <div class="card border-0 drop-shadow teacher-card my-5 mx-auto">
+                <div class="card-img-wrapper">
+                  <img
+                    src="./assets/teacher-7.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                </div>
+                <div class="card-body">
+                  <div class="teacher-name">
+                    <div
+                      class="d-md-flex align-items-center justify-content-between"
+                    >
+                      <p
+                        class="font-weight-bold text-secondary text-warning-hover h5 mt-0 mb-0"
+                      >
+                        Clara William
+                      </p>
+                    </div>
+                    <p class="text-secondary mt-1">Matematika</p>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+      <!-- Teachers section ends -->
+
+      <!-- Check demo section  -->
+      <section class="section-home">
+        <div
+          class="row justify-content-between align-items-center flex-md-row-reverse"
+        >
+          <div class="col-md-5">
+            <img src="./assets/check-demo-img.png" class="img-fluid" alt="" />
+          </div>
+          <div class="col-md-5">
+            <p class="h3 font-weight-bold text-secondary">
+              Let’s check our demo NOW!
+            </p>
+            <p class="text-secondary">
+              Click on the button below to view how we can help your online
+              lesson becomes interactive and useful
+            </p>
+            <a href="#" class="font-weight-bold btn btn-outline-warning"
+              >VIEW DEMO</a
+            >
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="footer-bg">
+      <div class="call-to-action bg-dark-transparent">
+        <div class="container text-white">
+          <h4 class="font-weight-bold">
+            What are you waiting for, join us today.
+          </h4>
+          <p>
+            Get your free 2 hours lessons for the first 1000 sign ups. Book your
+            seat now.
+          </p>
+          <button
+            class="btn bg-warning px-5 font-weight-bold text-white"
+            type="button"
+            data-toggle="modal"
+            data-target="#signUp"
+          >
+            SIGN UP NOW
+          </button>
+        </div>
+      </div>
+    </div>
+    <footer class="mt-7 pb-5">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 font-weight-bold text-secondary">Tentang Company</p>
+            <p class="text-secondary mt-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicingelit,sed do
+              eiusmod tempor incididunt ut labore etdolore magna aliqua.
+            </p>
+            <ul>
+              <li>
+                <a href="#"> </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Links</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Tentang Company</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">List Teachers</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Teachers Content</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Student Content</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Blog</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Bantuan</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Butuh bantuan ?</a>
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">Kontak kami</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <p class="h4 text-secondary font-weight-bold">Kontak kami</p>
+            <ul class="mt-4">
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-envelope fa-1x mr-2"></i>
+                  example@gmail.com</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-phone mr-2"></i>+62 999 9999 9999</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-building mr-2"></i>0411-25559000</a
+                >
+              </li>
+              <li class="mb-2">
+                <a class="text-secondary" href="#">
+                  <i class="fas fa-map-marker-alt mr-2"></i>Bandung, Indonesia,
+                  90241</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <!-- Modals -->
 
     <!-- Sign In Modal -->
@@ -211,7 +666,6 @@
     <script>
       $(document).ready(function () {
         $("#header").load("../templates/home-header.html");
-        $("#footer").load("../templates/footer.html");
       });
     </script>
 
