--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Member | Jadi Pintar</title>
+    <title>Dashboard | Jadi Pintar</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
@@ -21,7 +21,7 @@
         <img src="../assets/logo-white-yellow.png" width="140" />
       </a>
       <ul class="list-unstyled components mt-3">
-        <li>
+        <li class="active">
           <a href="dashboard.html">
             <img
               src="./assets/dashboard.svg"
@@ -31,7 +31,7 @@
             Dashboard</a
           >
         </li>
-        <li class="active">
+        <li>
           <a href="management.html">
             <img
               src="./assets/users.svg"
@@ -56,7 +56,7 @@
         </li>
       </ul>
       <div class="logout-wrapper">
-        <a href="#">
+        <a href="#" class="text-decoration-none">
           <img
             src="./assets/logout.svg"
             class="img-fluid mr-2"
@@ -67,33 +67,20 @@
         >
       </div>
     </nav>
+    <!-- Sidebar ends -->
 
     <!-- Main Content -->
     <div class="container-fluid sidebar-content">
       <div class="row">
         <div class="col-md-12">
+          <!-- Page title -->
           <div class="page-title mt-3 text-secondary">
-            <h1 class="h3">Management Teachers</h1>
-          </div>
-          <div
-            class="teacher-profile-dashboard p-4 bg-gray-custom rounded mt-5"
-          >
-            <div class="row">
-              <div class="col-md-4">
-                <div class="teacher-photo-wrapper">
-                  <div class="overlay">
-                    <button class="upload-btn" id="dashboard-upload-photo-btn">
-                      upload photo
-                    </button>
-                  </div>
-                  <img src="./assets/teacher-dashboard.jpg" alt="" />
-                </div>
-              </div>
-            </div>
+            <h1 class="h3">Dashboard</h1>
           </div>
         </div>
       </div>
     </div>
+    <!-- Main Content ends -->
 
     <!-- Modals -->
 
