add nama - booking id inside invoice

--- a/teacher-single.html
+++ b/teacher-single.html
@@ -31,11 +31,15 @@
               <img src="./assets/video-preview.jpg" class="img-fluid" alt="" />
             </div>
             <!-- Video preview content -->
-            <video class="teacher-video-content d-none" controls>
+            <iframe
+              class="teacher-video-content d-none"
+              src="https://www.youtube.com/embed/EngW7tLk6R8"
+            >
+            </iframe>
+            <!-- <video class="teacher-video-content d-none" controls>
               <source src="./assets/video-sample.mp4" type="video/mp4" />
-
               Your browser does not support the video tag.
-            </video>
+            </video> -->
           </div>
         </div>
       </div>
@@ -772,10 +776,12 @@
             </div>
             <div class="d-none summary-booking-wrapper">
               <ul>
-                <li>Subject: Matematika</li>
-                <li>Date: 20 Agustus 2020</li>
-                <li>Time: 08:00 - 09:00</li>
-                <li>Price: Rp. 50.000,00</li>
+                <li class="mb-2">Booking id: #552301</li>
+                <li class="mb-2">Nama guru: Clara William</li>
+                <li class="mb-2">Subject: Matematika</li>
+                <li class="mb-2">Date: 20 Agustus 2020</li>
+                <li class="mb-2">Time: 08:00 - 09:00</li>
+                <li class="mb-2">Price: Rp. 50.000,00</li>
               </ul>
               <p class="mt-4">Pay</p>
               <p>Please transfer to BCA: 080289042</p>
